# gold-streaming-demo

./: .pre-commit-config.yaml  README.md  dagster.yaml  pyproject.toml
gold_streaming_demo/: __init__.py  assets.py  config.py  run_kafka_pipeline.py  run_pipeline.py
gold_streaming_demo/kafka_utils/: __init__.py  consumer.py  producer.py  start_kafka.py
scripts/: create_kafka_topic.sh  kafka_start.sh  kafka_stop.sh
